Next Buttons complete (Except start page)

--- a/Domestic Violence Pizza App/Domestic Violence Pizza App/Base.lproj/Main.storyboard
+++ b/Domestic Violence Pizza App/Domestic Violence Pizza App/Base.lproj/Main.storyboard
@@ -34,10 +34,10 @@
             </objects>
             <point key="canvasLocation" x="-215.19999999999999" y="125.4872563718141"/>
         </scene>
-        <!--Crust View-->
+        <!--CrustView-->
         <scene sceneID="Q1S-ZO-S6Z">
             <objects>
-                <viewController id="5P4-dC-EwJ" userLabel="Crust View" sceneMemberID="viewController">
+                <viewController id="5P4-dC-EwJ" userLabel="CrustView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7GT-uR-toU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -72,10 +72,10 @@
             </objects>
             <point key="canvasLocation" x="-215" y="806"/>
         </scene>
-        <!--View Controller-->
+        <!--SauceView-->
         <scene sceneID="wEf-nT-8gX">
             <objects>
-                <viewController id="t8z-9R-iZn" sceneMemberID="viewController">
+                <viewController id="t8z-9R-iZn" userLabel="SauceView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lGH-5K-eWG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -295,10 +295,10 @@
             </objects>
             <point key="canvasLocation" x="1588" y="483.50824587706148"/>
         </scene>
-        <!--View Controller-->
+        <!--SizeView-->
         <scene sceneID="ckQ-gL-zZw">
             <objects>
-                <viewController id="MFW-tv-FaP" sceneMemberID="viewController">
+                <viewController id="MFW-tv-FaP" userLabel="SizeView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5Y5-FP-20j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -360,10 +360,10 @@
             </objects>
             <point key="canvasLocation" x="528.79999999999995" y="124.58770614692655"/>
         </scene>
-        <!--View Controller-->
+        <!--VeggiePage-->
         <scene sceneID="KUm-bi-arm">
             <objects>
-                <viewController id="YxW-h2-whN" customClass="ViewController" customModule="Domestic_Violence_Pizza_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="YxW-h2-whN" userLabel="VeggiePage" customClass="ViewController" customModule="Domestic_Violence_Pizza_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cex-fP-0Ia">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -375,6 +375,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRd-2x-acw">
+                                <rect key="frame" x="16" y="596" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.18823529410000001" green="0.65098039220000004" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="25"/>
+                                <state key="normal" title="Next: Drinks">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="clu-tu-DIR" kind="push" id="TEt-9l-66q"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="Dfp-5E-6PI"/>
@@ -385,10 +398,10 @@
             </objects>
             <point key="canvasLocation" x="-215" y="2164"/>
         </scene>
-        <!--View Controller-->
+        <!--CheeseView-->
         <scene sceneID="4xV-Fa-nH9">
             <objects>
-                <viewController id="RKM-65-5Wh" sceneMemberID="viewController">
+                <viewController id="RKM-65-5Wh" userLabel="CheeseView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cgc-sz-sKe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -423,10 +436,10 @@
             </objects>
             <point key="canvasLocation" x="-215" y="1484"/>
         </scene>
-        <!--View Controller-->
+        <!--MeatView-->
         <scene sceneID="Z00-Xf-l1F">
             <objects>
-                <viewController id="Ip2-J4-9Pv" sceneMemberID="viewController">
+                <viewController id="Ip2-J4-9Pv" userLabel="MeatView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h8n-WR-gDY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -461,10 +474,10 @@
             </objects>
             <point key="canvasLocation" x="529" y="1484"/>
         </scene>
-        <!--View Controller-->
+        <!--DrinkPage-->
         <scene sceneID="1hT-lS-uwC">
             <objects>
-                <viewController id="clu-tu-DIR" sceneMemberID="viewController">
+                <viewController id="clu-tu-DIR" userLabel="DrinkPage" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kW8-Cz-D21">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -476,19 +489,33 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o8b-B2-AsG">
+                                <rect key="frame" x="16" y="596" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.18823529410000001" green="0.65098039220000004" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="25"/>
+                                <state key="normal" title="Next: Special Requests">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="60h-za-DxX" kind="push" id="Fsh-so-k8R"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="DAq-xs-5PI"/>
                     </view>
+                    <navigationItem key="navigationItem" id="MI6-MV-hhh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uK2-CG-pvh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="529" y="2164"/>
         </scene>
-        <!--View Controller-->
+        <!--SpecialRequestsPage-->
         <scene sceneID="LpY-WV-pvI">
             <objects>
-                <viewController id="60h-za-DxX" customClass="ViewController" customModule="Domestic_Violence_Pizza_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="60h-za-DxX" userLabel="SpecialRequestsPage" customClass="ViewController" customModule="Domestic_Violence_Pizza_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lgs-aA-tEh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -500,19 +527,33 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzF-sU-lP1">
+                                <rect key="frame" x="16" y="596" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.18823529410000001" green="0.65098039220000004" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="25"/>
+                                <state key="normal" title="Next: Payment Info">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="bhI-MJ-qdw" kind="push" id="iTs-7t-5Wf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="vUT-tj-A7f"/>
                     </view>
+                    <navigationItem key="navigationItem" id="QOH-C3-10j"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3e-xN-SaL" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-215" y="2848"/>
         </scene>
-        <!--View Controller-->
+        <!--InformationPage-->
         <scene sceneID="HYI-yw-ByJ">
             <objects>
-                <viewController id="bhI-MJ-qdw" sceneMemberID="viewController">
+                <viewController id="bhI-MJ-qdw" userLabel="InformationPage" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="swi-8x-CUw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -528,6 +569,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="T7B-bB-M0g"/>
                     </view>
+                    <navigationItem key="navigationItem" id="pdu-Oe-UhH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pBI-9u-l7T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
